# rSOC

./: .gitignore  Cargo.toml  README.md  build.rs  host_rules.txt  host_sensor_config.txt  net_sensor_config.txt  server_config.txt
proto/: ssi.proto
src/: host_sensor.rs  mgmt_server.rs  net_sensor.rs  r_sensor.rs
src/auth/: auth.rs
src/authentication/: authentication.rs  mod.rs
src/file_manager/: file_manager.rs  mod.rs
src/menu/: menu.rs
src/sensor_handler/: mod.rs  rule_handler.rs  sensor_handler.rs
src/structs/: mod.rs  soc_structs.rs
