[package]
name = "rSOC"
version = "0.1.0"
authors = ["buran <bvran@proton.me>"]
edition = "2021"

[dependencies]

[build-dependencies]

[[bin]]
name = "management_server"
path = "src/mgmt_server.rs"

[[bin]]
name = "host_sensor"
path = "src/host_sensor.rs"

[[bin]]
name = "net_sensor"
path = "src/net_sensor.rs"