[package]
name = "rSOC"
version = "0.1.0"
authors = ["buran <bvran@proton.me>"]
edition = "2021"

[dependencies]
tokio = {version="1.41.1",features = ["full"]}
tokio-tungstenite = "0.24.0"
futures = "0.3.31"
clap = "4.5.21"

[build-dependencies]

[[bin]]
name = "management_server"
path = "src/mgmt_server.rs"

[[bin]]
name = "host_sensor"
path = "src/host_sensor.rs"

[[bin]]
name = "net_sensor"
path = "src/net_sensor.rs"