[package]
name = "rSOC"
version = "0.1.0"
authors = ["buran <bvran@proton.me>"]
edition = "2021"

[dependencies]
tokio = {version="1.42.0",features = ["full"]}
tokio-tungstenite = "0.24.0"
futures = "0.3.31"
clap = "4.5.23"
sha2 = "0.10.8"
chrono = "0.4.39"
reopen = "1.0.3"
regex = "1.11.1"

[dependencies.pnet]
version = "0.35.0"

[build-dependencies]

[[bin]]
name = "management_server"
path = "src/mgmt_server.rs"

[[bin]]
name = "host_sensor"
path = "src/host_sensor.rs"

[[bin]]
name = "net_sensor"
path = "src/net_sensor.rs"